--- a/test1.html
+++ b/test1.html
@@ -1,2 +1,11 @@
-<div id="fb-root"></div>
-<script async="1" defer="1" crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0"></script><div class="fb-page" data-href="https://www.facebook.com/LARKSPURFIREDISTRICT/" data-height="1500" data-small-header="" data-adapt-container-width="1" data-hide-cover="" data-show-facepile="true" data-show-posts="true" data-width="600"><blockquote cite="https://www.facebook.com/LARKSPURFIREDISTRICT/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/LARKSPURFIREDISTRICT/">Larkspur Fire Protection District</a></blockquote></div>
+<iframe 
+  src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FLARKSPURFIREDISTRICT%2F&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1472642930378967" 
+  width="340" 
+  height="130" 
+  style="border:none;overflow:hidden" 
+  scrolling="no" 
+  frameborder="0" 
+  allowfullscreen="true" 
+  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+  loading="lazy">
+</iframe>
