--- a/test1.html
+++ b/test1.html
@@ -1,11 +1,30 @@
-<iframe 
-  src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FLARKSPURFIREDISTRICT%2F&tabs&width=340&height=130&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1472642930378967" 
-  width="340" 
-  height="130" 
-  style="border:none;overflow:hidden" 
-  scrolling="no" 
-  frameborder="0" 
-  allowfullscreen="true" 
-  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-  loading="lazy">
-</iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Facebook Page Plugin Example</title>
+</head>
+<body>
+  <!-- Facebook Root Element -->
+  <div id="fb-root"></div>
+  
+  <!-- Facebook SDK Script -->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967"></script>
+  
+  <!-- Facebook Page Plugin -->
+  <div class="fb-page"
+       data-href="https://www.facebook.com/LARKSPURFIREDISTRICT/"
+       data-tabs=""
+       data-width="500"
+       data-height="1500"
+       data-small-header="true"
+       data-adapt-container-width="false"
+       data-hide-cover="true"
+       data-show-facepile="true">
+    <blockquote cite="https://www.facebook.com/LARKSPURFIREDISTRICT/" class="fb-xfbml-parse-ignore">
+      <a href="https://www.facebook.com/LARKSPURFIREDISTRICT/">Larkspur Fire Protection District</a>
+    </blockquote>
+  </div>
+</body>
+</html>
