--- a/test1.html
+++ b/test1.html
@@ -3,21 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facebook Page Plugin Example</title>
+  <title>Enlarged Facebook Page Plugin</title>
 </head>
 <body>
   <!-- Facebook Root Element -->
   <div id="fb-root"></div>
   
-  <!-- Facebook SDK Script -->
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967"></script>
+  <!-- Load the Facebook SDK -->
+  <script async defer crossorigin="anonymous" 
+          src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967">
+  </script>
   
-  <!-- Facebook Page Plugin -->
+  <!-- Facebook Page Plugin with Enlarged Dimensions -->
   <div class="fb-page"
        data-href="https://www.facebook.com/LARKSPURFIREDISTRICT/"
-       data-tabs=""
-       data-width="500"
-       data-height="1500"
+       data-tabs="timeline"
+       data-width="800"
+       data-height="2000"
        data-small-header="true"
        data-adapt-container-width="false"
        data-hide-cover="true"
