--- a/test1.html
+++ b/test1.html
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlarged Facebook Page Plugin</title>
-</head>
-<body>
-  <!-- Facebook Root Element -->
-  <div id="fb-root"></div>
-  
-  <!-- Load the Facebook SDK -->
-  <script async defer crossorigin="anonymous" 
-          src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967">
-  </script>
-  
-  <!-- Facebook Page Plugin with Enlarged Dimensions -->
-  <div class="fb-page"
-       data-href="https://www.facebook.com/LARKSPURFIREDISTRICT/"
-       data-tabs="timeline"
-       data-width="800"
-       data-height="2000"
-       data-small-header="true"
-       data-adapt-container-width="false"
-       data-hide-cover="true"
-       data-show-facepile="true">
-    <blockquote cite="https://www.facebook.com/LARKSPURFIREDISTRICT/" class="fb-xfbml-parse-ignore">
-      <a href="https://www.facebook.com/LARKSPURFIREDISTRICT/">Larkspur Fire Protection District</a>
-    </blockquote>
-  </div>
-</body>
-</html>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967"></script>
+
+<div class="fb-page" data-href="https://www.facebook.com/LARKSPURFIREDISTRICT" data-tabs="timeline," data-width="499" data-height="1000" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/LARKSPURFIREDISTRICT" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/LARKSPURFIREDISTRICT">Larkspur Fire Protection District</a></blockquote></div>
