--- a/test1.html
+++ b/test1.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Digital Signage Image</title>
-  <style>
-    body {
-      margin: 0;
-      background: #000;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
-  </style>
-</head>
-<body>
-  <img src="https://drive.google.com/uc?export=view&id=1auvEzygssUoPqENyykIG3ofHKzlrEXEG" alt="Digital Signage Image">
-</body>
-</html>
+  <img src="https://drive.google.com/thumbnail?id=1auvEzygssUoPqENyykIG3ofHKzlrEXEG&sz=s4000">
