--- a/test1.html
+++ b/test1.html
@@ -28,6 +28,6 @@
   </style>
 </head>
 <body>
-  <img src="https://drive.google.com/thumbnail?id=1IUVvrnJI1f8peniBRO1tVacr-9a_dOyz&sz=s4000" alt="Responsive Image">
+  <img src="https://lh3.googleusercontent.com/d/1IUVvrnJI1f8peniBRO1tVacr-9a_dOyz" alt="Responsive Image">
 </body>
 </html>
