--- a/test.html
+++ b/test.html
@@ -1,103 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Florida 511 Camera Feeds</title>
-  <!-- Include hls.js from CDN for HLS support in non-Safari browsers -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .video-box {
-      width: 400px;
-      height: 300px;
-      background: #111;
-      overflow: hidden;
-    }
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <!-- First Camera Feed -->
-    <div class="video-box">
-      <video id="777-video_html5_api" preload="auto" autoplay muted playsinline
-             data-setup='{ "controls": true }'
-             tabindex="-1" src="blob:https://fl511.com/e09eecff-3ae8-48f5-9fe5-b0c3d6fe2f51">
-        <source src="https://167-d5.divas.cloud/CHAN-6316/CHAN-6316_1.stream/playlist.m3u8?204.145.118.4&vdswztokenhash=MJRRC3cdwKbNhpzmcvBrRwNx036n7opSAge3pq_PuO4=" type="application/x-mpegURL">
-        <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video.</p>
-      </video>
-    </div>
-
-    <!-- Second Camera Feed -->
-    <div class="video-box">
-      <video id="1080-video_html5_api" preload="auto" autoplay muted playsinline
-             data-setup='{ "controls": true }'
-             tabindex="-1" src="blob:https://fl511.com/6a4899a3-5ef9-4c03-8bea-8d5dca26cde4">
-        <source src="https://162-d2.divas.cloud/CHAN-9405/CHAN-9405_1.stream/playlist.m3u8?204.145.118.4&vdswztokenhash=GYDO8kkJH7dHphAT7H9kwHcKyZXaMknGFcCphebkuFw=" type="application/x-mpegURL">
-        <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video.</p>
-      </video>
-    </div>
-
-    <!-- Third Camera Feed -->
-    <div class="video-box">
-      <video id="1078-video_html5_api" preload="auto" autoplay muted playsinline
-             data-setup='{ "controls": true }'
-             tabindex="-1" src="blob:https://fl511.com/67d28640-7e15-4d6b-af25-ab79e8e782b7">
-        <source src="https://162-d2.divas.cloud/CHAN-9403/CHAN-9403_1.stream/playlist.m3u8?204.145.118.4&vdswztokenhash=LbL2sMw-ZWz-3fUI8dvBStFYsUj-xlaYsRdtmJedt4w=" type="application/x-mpegURL">
-        <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video.</p>
-      </video>
-    </div>
-  </div>
-
-  <script>
-    // Function to initialize hls.js on a given video element by its ID.
-    function setupHls(videoId) {
-      const video = document.getElementById(videoId);
-      const hlsSource = video.querySelector('source').src;
-      
-      function tryPlayVideo() {
-        video.muted = true; // Ensure video is muted for autoplay.
-        video.play().catch(error => {
-          console.error(`Playback error for ${videoId}:`, error);
-        });
-      }
-      
-      if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(hlsSource);
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, tryPlayVideo);
-      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = hlsSource;
-        video.addEventListener('loadedmetadata', tryPlayVideo);
-      } else {
-        console.error('This browser does not support HLS.');
-      }
-    }
-
-    // Initialize HLS for all three cameras.
-    setupHls("777-video_html5_api");
-    setupHls("1080-video_html5_api");
-    setupHls("1078-video_html5_api");
-  </script>
-</body>
-</html>
+<iframe
+  frameborder="0"
+  style="border: none; overflow: hidden;"
+  allowfullscreen
+  webkitallowfullscreen
+  mozallowfullscreen
+  scrolling="no"
+  src="https://fl511.com/Map/EmbeddedMap?
+       lat=29.509705419462012
+       &lng=-81.19600817866367
+       &zoom=14
+       &layers=49      <!-- Cameras + live video -->
+       &video=true     <!-- enable HLS streams -->
+       &size=0"       <!-- your chosen size -->
+  width="810px"
+  height="640px">
+</iframe>
