--- a/fb.html
+++ b/fb.html
@@ -42,7 +42,7 @@
 
   <script>
     // ⚠️ Replace with your own App ID
-    const APP_ID = 'YOUR_APP_ID_HERE';
+    const APP_ID = '1472642930378967';
 
     // SDK init
     window.fbAsyncInit = function () {
